ipc/ipdl/test/ipdl/error/undefMutualRecStruct.ipdl
struct X { Y y; };
struct Y { Z z; };
struct Z { X x; };

protocol undefMutualRecStruct {
child: async __delete__(X x);
};
